fixing overlap

--- a/lwv-clarion-app/src/app/components/calendar/calendar.component.scss
+++ b/lwv-clarion-app/src/app/components/calendar/calendar.component.scss
@@ -3,10 +3,11 @@
     position: fixed;
     margin: auto;
     left: 2%;
-    top: 5%;
+    top: 9%;
     right: 2%;
     width: 90%;
-    height: 90%;
+    height: 100%;
+    
   }
 
   .fc .fc-button-primary  {
