--- a/lwv-clarion-app/src/app/components/home/home.component.scss
+++ b/lwv-clarion-app/src/app/components/home/home.component.scss
@@ -6,7 +6,7 @@
 
 .logo {
     position: fixed;
-    top:6%;
+    top:9%;
     height: 15%;
     left: 5%;
 }
@@ -18,7 +18,7 @@
 .memberButton{
     position: fixed;
     right: 15%;
-    top: 7.5%;
+    top: 9.5%;
     background-color: #be0f34;
     color: white;
     font-size: xx-large;
